--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ name: "Scholars’ Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars’ Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://scholarslab.lib.virginia.edu" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://scholarslab.lib.virginia.edu" # the base hostname & protocol for your site
 permalink: /:title/
 timezone: America/New_York
 # Build settings
@@ -22,6 +22,7 @@ kramdown:
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-redirect-from
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -29,8 +30,8 @@ exclude:
   - docs
   - node_modules
   - theme-testing
-#  - _posts # temporary! uncomment to significantly reduce build time for theme testing
-#  - _people # temporary, uncomment to reduce testing build time
+  - _posts # temporary! uncomment to significantly reduce build time for theme testing
+  - _people # temporary, uncomment to reduce testing build time
   - assets/python # helper scripts to manipulate HTML/CSS, not used in build
 
 collections_dir: collections
