Redirects & dh-pedagogy link...
- CSS styling will need to be updated to show submenus, but leaving that as unsure if Jeremy will implement JS alt instead
-Finishes getting all nav page redirects working
- Gets second link in nav to for-students (expertise>dh-pedagogy) correctly redirecting to for-students

--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ header_pages:
 ## Nested list for primary navigation.
 primary-navigation:
   - label: "About"
-    url: "for-students"
+    url: "about"
   - label: "Expertise"
     url: "expertise"
   - label: "Collaborate"
