Finalizes /blog, /research-blog loops; adds category:update layout file...
- renames "Events" folder and top-level nav item to match Laura's GDoc (to "News/Events" title, news-events folder name)
- "News/Events" > "News Blog" goes to /blog, which displays all 3 post categories (blog, announcement, updates) and handles updates differently (given their short, author-less etc. nature)
- pages/scholarship/research.html is a research-only version of the blog (linked at /research-blog; only pulls in category: blog)
- Finalizes two example category: update files (2024-05-31-jitp-praxis-article.md and 2024-07-17-dhmakes-korean-dh-journal.md)
- removes faq, per conversation w/Laura (holding until post-launch; create a GH issue to remind us and contain the draft text)

--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,6 @@ primary-navigation:
   - label: "About"
     url: "about"
     subnavigation:
-      - label: "FAQ"
-        url: "faq"
       - label: "People"
         url: "people"
       - label: "Charter"
@@ -87,7 +85,7 @@ primary-navigation:
       - label: "Our Projects"
         url: "our-projects"
       - label: "Research Blog"
-        url: "blog"
+        url: "research-blog"
   - label: "Visit"
     url: "visit"
     subnavigation:
@@ -95,11 +93,11 @@ primary-navigation:
         url: "use-the-lab"
       - label: "Use the Makerspace"
         url: "makerspace"
-  - label: "Events"
+  - label: "News/Events"
     url: "events"
     subnavigation:
-      - label: "News"
-        url: "news"
+      - label: "News Blog"
+        url: "blog"
       - label: "Newsletters"
         url: "newsletters"
         
