Work & events slug changes...
* "Our Projects" page keeps /work URL (and redirects from /our-projects)
* Events Archive and /events-archive both use plural "events" to match Events and /events
* Config nav links adjusted

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ primary-navigation:
     url: "scholarship"
     subnavigation:
       - label: "Our Projects"
-        url: "our-projects"
+        url: "work"
       - label: "Blog"
         url: "blog"
   - label: "Visit"
@@ -92,7 +92,7 @@ primary-navigation:
     url: "events"
     subnavigation:
       - label: "Event Archive"
-        url: "event-archive"
+        url: "events-archive"
 
 defaults:
   - scope:
